# lightning-conformance

./: .gitignore  Cargo.toml  More README.md  README.md  abort_splice.sh  bitcoin-deployment.yaml  bitcoin-service.yaml  channel-graph.sh  channel_graph.sh  check-route.sh  check-status.sh  cln-claim0-persistentvolumeclaim.yaml  cln-deployment.yaml  cln-service.yaml  close-channels.sh  close-random-channel.py  docker-compose.yml  fund-nodes.sh  fund_hub.sh  fund_nodes.sh  fund_remote.sh  generate-blocks.sh  generate-graph.sh  generate_blocks.sh  init-bitcoind.sh  init_bitcoind.sh  lnd-metrics.txt  lots-of-work.sh  one-channel.sh  peer-graph.sh  peer_graph.sh  prep-spam-sends.sh  provide-authentitation-to-operator.sh  provide-authentitation-to-visualizer.sh  randomize-fees.sh  reset_everything.sh  route-test.py  route-test.sh  send_bitcoin.sh  sensei_instance_info.json  (+8 more)
brutalizer/: pyproject.toml
brutalizer/auth/: lnd.cert  lnd.macaroon  lnd2.cert  lnd2.macaroon
brutalizer/brutalizer/: app.py  flood.py  lnd.py
dockerfiles/cln-sluggish/: Dockerfile
dockerfiles/cln-spaz/: Dockerfile
dockerfiles/sluggish-cln/: Dockerfile
dockerfiles/splicing/: Dockerfile
operator/: .gitignore  Dockerfile
operator/client/: package.json
operator/server/: README.md
resources/: lnd-150.conf  lnd-151.conf  lnd-152.conf  lnd-153.conf  lnd.conf  lnd2.conf  prometheus.yaml  thunderhub.yaml
rubytests/: Gemfile
src/: main.rs  traffic.rs
tests/: Untitled.ipynb  example.py  main.py  malicious-invoice.py  pyproject.toml
v2/: peer-graph.sh
visualize/: graph.json  package.json
(+36 files in other folders)
